Revert "Merge pull request #25 from Zain-Mahmoud/feature/data-access-layer-+-API"
This reverts commit c30fff6057feab80fd85952498a2246b62c83b6f, reversing
changes made to daed1266bc5282317f7896d5b73f3ff10d66ba56.